2009-12-22  Helmut Eller  <heller@common-lisp.net>

	Some new backend functions used for loading image files.

	* swank-backend.lisp (socket-fd, make-fd-stream, dup, exec-image)
	(command-line-args): New functions.
	* swank-cmucl.lisp: Impemented.
	* swank-cmucl.lisp (reset-sigio-handlers): New function.
	(save-image): Fix quoting bug.

	* swank.lisp (clear-event-history): New functoin.
	(interactive-eval, eval-region): Don't use FRESH-LINE.

2009-12-21  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-at-list-p): Deleted.
	(slime-at-expression-p): Moved to slime-package-fu.
	(slime-forward-blanks): Deleted. Use `(skip-chars-forward
	"[:space:]")' instead.
	(slime-forward-any-comment): Deleted.
	(slime-reader-conditionals-regexp): Make a constant so it's
	inlined.
	(slime-unknown-feature-expression): Make it an error.

2009-12-19  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (defpackage): export with-symbol and
	replace its fully qualified usage everywhere.

2009-12-17  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-edit-uses-xrefs): New variable. For contribs to
	extend.
	(slime-edit-uses): Use it.

	* swank.lisp (xref-doit): Now a generic functions. For contribs to
	extend.

2009-12-17  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (with-top-level-restart): Bind local special.
	(top-level-restart-p): Check for it; this tells us if we're in
	the dynamic extent of with-top-level-restart.
	(handle-requests): Use it.

2009-12-17  Stas Boukarev  <stassats@gmail.com>

	* swank-match.lisp: Fix formatting and style warnings.

2009-12-17  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (handle-requests): Comment out
	(assert (boundp '*sldb-quit-restart*)) because it's not bound
	on NIL communication style. It's not a real fix, but at least it
	lets null communication-style work.

2009-12-16  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (categorize-definition-source): New.